Fix issue of extra margin in bottom (#93)

--- a/examples/demo.css
+++ b/examples/demo.css
@@ -13,7 +13,7 @@
 
 body {
   padding: 20px;
-  margin: 0 auto 200px;
+  margin: 0 auto 20px;
   max-width: 1000px;
   background: #f8f8fa;
 }
